Stampa degli imput utente

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Java</title>
 </head>
 <body>
-    <p id="suggerimentoPassword"></p>
-    
+    <div id="nomeUtente">
+    </div>
+
+    <div id="cognomeUtente"> 
+    </div>
+
+    <div id="colorePreferito">
+    </div>
+
+    <div>
+        <h4 id="passwordPotenzialmenteDebole"></h4>
+    </div>
+
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
